--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,63 +1,69 @@
 :root {
-  --first-color: #ffaaa5;
-  --first-color-opacity: rgba(255, 170, 165, 0.8);
-  --second-color: #fcf8f3;
+  --first-color-text: #ffaaa5;
+  --first-color-background: rgba(255, 170, 165, 0.8);
+  --second-color-background: #fcf8f3;
+  --second-color-text: #fefbef;
   --third-color: #ffd3b6;
-  --fourth-color: #698474;
-  --fourth-color-opacity: rgba(105, 132, 116, 0.9);
+  --fourth-color-text: #698474;
+  --fourth-color-background: rgba(105, 132, 116, 0.9);
   --primary-font: "Montserrat", sans-serif;
   --secondary-font: "Roboto", sans-serif;
 }
 
 h1 {
   font-family: var(--primary-font);
+  color: var(--fourth-color-text);
   font-size: 53px;
-  color: var(--fourth-color);
-  margin-left: 5px;
 }
 
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
-  font-family: var(--secondary-font);
-  color: var(--second-color);
+  font-family: var(--primary-font);
+  color: var(--second-color-text);
   font-weight: 300;
+  font-size: 15px;
+  line-height: 1.9;
 }
 body {
-  background-color: var(--fourth-color-opacity);
+  background-color: var(--fourth-color-background);
 }
 .hero {
-  background-color: var(--second-color);
-  margin: 0, auto;
-  padding: 0;
+  background-color: var(--second-color-background);
+}
+.container {
+  margin: 90px auto;
 }
 
-.primary-word {
-  color: var(--first-color);
-  font-weight: 375;
-  font-size: 13px;
-}
 .locations {
-  background-color: var(--first-color-opacity);
-  border-radius: 8px;
+  background-color: var(--first-color-background);
+  border-radius: 5px;
+  border-bottom-left-radius: 30px;
   padding: 15px 25px;
 }
+
 .locations .primary-word {
-  color: var(--fourth-color);
-  font-weight: 400;
+  font-family: var(--primary-font);
+  color: var(--fourth-color-text);
+  font-weight: 500;
+  font-size: 13px;
 }
 .timeline {
-  background-color: var(--fourth-color-opacity);
+  background-color: var(--fourth-color-background);
   padding: 50px 40px;
-  border-radius: 8px;
+  border-radius: 5px;
+
+  border-top-right-radius: 45px;
 }
 
 .timeline .primary-word {
   font-family: var(--primary-font);
+  color: var(--first-color-text);
   font-weight: 400;
+  font-size: 13px;
 }
+
 .timeline li {
-  line-height: 1.9;
-  font-family: "Roboto", sans-serif;
+  line-height: 2.3;
 }
