--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -28,14 +28,17 @@ ul {
   font-weight: 300;
   font-size: 13px;
   line-height: 1.9;
+  white-space: nowrap;
 }
 
 .hero {
   background-color: var(--second-color-background);
 }
-.container {
+.row {
+  flex-wrap: nowrap;
   margin: 75px auto;
   justify-content: center;
+
   max-width: 700px;
 }
 .coordinates {
@@ -86,4 +89,25 @@ ul {
 .timeline li {
   font-size: 17px;
   line-height: 2.4;
+}
+
+@media (max-width: 768px) {
+  .container {
+    text-align: center;
+    margin: 15px;
+  }
+  .coordinates {
+    padding: 0;
+  }
+
+  .locations {
+    border-radius: 5px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    padding: 10px, 0px;
+  }
+  .timeline {
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+  }
 }
