--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -89,7 +89,7 @@ ul {
   padding: 50px 40px;
   border-radius: 5px;
   border-bottom-right-radius: 45px;
-  box-shadow: 5px 3px 3px var(--third-color);
+  box-shadow: 5px 3px 3px #556a5d;
 }
 
 .timeline .primary-word {
@@ -118,9 +118,10 @@ ul {
   border-radius: 5px;
   border-top-right-radius: 45px;
   border-bottom-left-radius: 45px;
-  padding: 10px;
+  padding: 4px;
   background-color: var(--third-color);
   opacity: 75%;
+  box-shadow: 10px 5px 5px #556a5d;
 }
 
 .projects .primary-word {
@@ -136,6 +137,7 @@ ul {
   font-family: var(--primary-font);
   border-radius: 25px;
   padding: 10px 20px;
+  box-shadow: 5px 3px 3px #5f7768;
 }
 
 .learn-more-button:hover {
