--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -23,6 +23,11 @@ h1 {
   font-size: 53px;
 }
 
+h3 {
+  color: var(--first-color-text);
+  font-family: var(--secondary-font);
+  font-weight: 300;
+}
 ul {
   list-style: none;
   padding: 0;
@@ -144,6 +149,34 @@ ul {
 .learn-more-button:hover {
   background-color: var(--first-color-background);
   color: var(--fourth-color-text);
+}
+
+.about-img {
+  background-color: var(--third-color);
+  border-radius: 5px;
+  border-top-left-radius: 45px;
+  box-shadow: 5px 3px 3px var(--box-shadow-color);
+  padding: 10px;
+  justify-content: center;
+}
+
+.about-img img {
+  border-radius: 5px;
+  border-top-right-radius: 45px;
+  transform: scaleX(-1);
+  align-self: center;
+}
+
+.about-paragraph {
+  background-color: var(--fourth-color-background);
+  border-radius: 5px;
+  border-top-right-radius: 30px;
+  padding: 15px 25px;
+  box-shadow: 5px 3px 3px var(--box-shadow-color);
+}
+
+.about-paragraph p {
+  color: var(--second-color-text);
 }
 
 @media (max-width: 768px) {
