--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -202,7 +202,7 @@ ul {
     border-top-right-radius: 30px;
     padding: 10px, 0px;
   }
-  .timeline {
+  .personal-summary {
     border-bottom-right-radius: 30px;
     border-bottom-left-radius: 30px;
     padding: 30px 2px;
