--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,7 +1,7 @@
 :root {
   --first-color: 255, 170, 165;
-  --second-color: #fefbef;
-  --third-color: #ffd3b6;
+  --second-color: 254, 251, 239;
+  --third-color: 255, 211, 182;
   --fourth-color: 105, 132, 116;
   --box-shadow-color: rgb(95, 119, 104, 0.3);
   --primary-font: "Montserrat", sans-serif;
@@ -11,8 +11,13 @@
 body {
   background-color: rgba(var(--fourth-color), 0.9);
   font-family: var(--secondary-font);
-  color: var(--third-color);
+  color: rgb(var(--third-color));
   font-weight: 300;
+}
+
+nav {
+  background-color: rgb(var(--fourth-color), 0.9);
+  color: rgb(var(--first-color));
 }
 
 h1 {
@@ -31,7 +36,7 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
-  color: var(--second-color);
+  color: rgb(var(--second-color));
   font-weight: 300;
   font-size: 13px;
   line-height: 1.9;
@@ -39,15 +44,16 @@ ul {
 
 a {
   text-decoration: none;
-  color: var(--second-color);
+  color: rgb(var(--second-color));
 }
 a:hover {
-  color: var(--third-color);
+  color: rgb(var(--third-color));
 }
 
 .hero {
-  background-color: #fcf8f3;
+  background-color: rgb(var(--second-color));
   justify-content: center;
+  padding: 70px 0;
 }
 .row {
   flex-wrap: nowrap;
@@ -65,7 +71,7 @@ a:hover {
   justify-content: space-between;
 }
 .personal-highlights {
-  background-color: rgba(var(--first-color), 0.8);
+  background-color: rgba(var(--first-color), 0.6);
   border-radius: 5px;
   border-top-left-radius: 30px;
   padding: 15px 25px;
@@ -74,7 +80,7 @@ a:hover {
 
 .personal-highlights .primary-word {
   font-family: var(--primary-font);
-  color: var(--second-color);
+  color: rgb(var(--second-color));
   font-weight: 500;
   font-size: 13px;
 }
@@ -87,7 +93,7 @@ a:hover {
 
 .personal-summary {
   background-color: rgba(var(--fourth-color), 0.9);
-  color: var(--second-color);
+  color: rgb(var(--second-color));
   font-weight: 200;
   font-family: var(--secondary-font);
   padding: 20px;
@@ -110,7 +116,7 @@ a:hover {
 .homepage .personal-summary {
   padding: 40px;
   border-bottom-right-radius: 45px;
-  color: var(--third-color);
+  color: rgb(var(--third-color));
   font-weight: 300;
 }
 
@@ -119,7 +125,7 @@ a:hover {
   text-decoration: none;
   font-family: var(--primary-font);
   color: rgba(var(--fourth-color));
-  border: 2px solid var(--third-color);
+  border: 2px solid rgb(var(--third-color));
   border-radius: 5px;
   border-bottom-left-radius: 30px;
   border-top-right-radius: 30px;
@@ -134,7 +140,7 @@ a:hover {
 
 .secondary-btn {
   border: 2px solid rgba(var(--first-color), 0.8);
-  color: var(--third-color);
+  color: rgb(var(--third-color));
   font-family: var(--primary-font);
   border-radius: 25px;
   padding: 10px 20px;
@@ -154,9 +160,9 @@ a:hover {
   border-radius: 5px;
   border-top-right-radius: 45px;
   border-bottom-left-radius: 45px;
-  border: 2px solid var(--third-color);
+  border: 2px solid rgb(var(--third-color));
   padding: 4px;
-  background-color: var(--third-color);
+  background-color: rgb(var(--third-color));
   opacity: 75%;
   box-shadow: 10px 5px 5px var(--box-shadow-color);
 }
@@ -172,13 +178,13 @@ a:hover {
 }
 
 .about {
-  background-color: var(--second-color);
+  background-color: rgb(var(--second-color));
 }
 
 .about-img {
   border-radius: 5px;
   border-top-left-radius: 45px;
-  border: 10px solid var(--third-color);
+  border: 10px solid rgb(var(--third-color));
   box-shadow: 5px 5px 7px var(--box-shadow-color);
 }
 
@@ -225,7 +231,7 @@ a:hover {
   .about-img {
     border-top-left-radius: 45px;
     border-top-right-radius: 45px;
-    border: 15px solid var(--third-color);
+    border: 15px solid rgb(var(--third-color));
   }
 
   .about-paragraph {
