--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,13 +21,14 @@ nav {
 }
 
 .navbar-brand,
-.nav-link {
+.nav-link,
+.custom-toggler-icon {
   color: rgb(var(--first-color));
 }
 
-.nav-link:hover {
-  text-decoration: underline;
-  color: rgb(var(--first-color));
+.nav-link:hover,
+.homepage-icon:hover {
+  color: rgb(var(--third-color));
 }
 .navbar-toggler {
   border-color: rgb(var(--first-color));
