--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -287,4 +287,9 @@ footer .social-link:hover {
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
   }
+
+  footer .social-link {
+    font-size: 14px;
+    padding: 15px 10px;
+  }
 }
